--- a/public/404.html
+++ b/public/404.html
@@ -16,7 +16,7 @@
         <link href="/assets/elegant-icons.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="/assets/lightbox.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="/assets/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href="/assets/theme-asprin.css" rel="stylesheet" type="text/css" media="all"/>
+        <link href="/assets/stylesheets/theme-asprin.css" rel="stylesheet" type="text/css" media="all"/>
         <!--[if gte IE 9]>
         	<link rel="stylesheet" type="text/css" href="css/ie9.css" />
 		<![endif]-->
